[package]
name = "sending_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
url = { git = "https://github.com/servo/rust-url" }
regex = { git = "https://github.com/rust-lang/regex" }
console = "0.15.2"
smoltcp = "0.8.1"
managed = { version = "0.8", default-features = false, features = ["map"] }
byteorder = { version = "1.0", default-features = false }
log = { version = "0.4.4", default-features = false, optional = true }
libc = { version = "0.2.18", optional = true }
bitflags = { version = "1.0", default-features = false }
defmt = { version = "0.3", optional = true }
cfg-if = "1.0.0"
heapless = "0.7.8"


[dev-dependencies]
env_logger = "0.9"
getopts = "0.2"
rand = "0.8"